Fix the emoji picker having an incorrect z-index, among other small fixes. * emoji-button.min.js is now using my fork of emoji-button https://github.com/netux/emoji-button/tree/pxls * bumped Twemoji to 13.0.0 * use Twemoji style for the emoji picker * fixed some style issues

--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -15,6 +15,8 @@ z-index:
 22 - lookup, emoji-picker
 22 - admin-check popup
 
+30 - emoji picker
+
 98 - lost connection
 99 - alert box
 */
@@ -1755,16 +1757,12 @@ body .emoji-picker {
     background: var(--emoji-picker-background);
 }
 
-.emoji-picker img.emoji {
-    max-height: 1.3rem;
-}
-
 .emoji-picker .emoji-picker__search {
     padding-left: .5em;
 }
 
 .emoji-picker .emoji-picker__preview {
-    padding-top: 1.75em;
+    padding-top: 1.5em 1em;
     border-top: 1px solid #999999;
     border-top: 1px solid var(--emoji-picker-border-color);
 }
